# oxid64

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  asm_decode.txt  build.rs
.github/workflows/: ci.yml
benches/: base64_bench.rs
doc/: benchmarks.md  oxid64_unsafe_correctness_stack_plan.md  safety-auditory.txt  safety_verification.md  sse_changelog.md  tools-auditory.md  uops.info - Table.csv
doc/safety/: avx2.md  avx512vbmi.md  baseline.md  fuzz.md  kani.md  miri.md  msan.md  neon.md  ssse3.md  wasm_simd128.md
fuzz/: Cargo.toml
fuzz/corpus/avx2_non_strict_schedule/: seed_02
fuzz/corpus/avx2_strict_diff/: seed_04
fuzz/corpus/avx2_unchecked_contract/: seed_04
fuzz/corpus/avx512_encode_diff/: seed_04
fuzz/corpus/avx512_strict_diff/: seed_03  seed_04
fuzz/corpus/decode_diff/: seed_05  seed_08
fuzz/corpus/encode_diff/: seed_05
fuzz/corpus/invalid_semantics/: seed_03  seed_06
fuzz/corpus/neon_encode_diff/: seed_02  seed_03  seed_04
fuzz/corpus/neon_non_strict_schedule/: seed_01  seed_02  seed_03  seed_04
fuzz/corpus/neon_partial_write_bounds/: seed_01  seed_02  seed_03  seed_04
fuzz/corpus/neon_strict_diff/: seed_04
fuzz/corpus/roundtrip/: seed_01
fuzz/corpus/ssse3_non_strict_schedule/: seed_02
fuzz/corpus/tail_alignment/: seed_04
fuzz/corpus/wasm_encode_prefix_model/: seed_02
fuzz/corpus/wasm_partial_write_model/: seed_02
fuzz/corpus/wasm_pshufb_compat/: seed_02  seed_03
fuzz/fuzz_targets/: avx2_non_strict_schedule.rs  avx2_partial_write_bounds.rs  avx2_strict_diff.rs  avx2_unchecked_contract.rs  avx512_encode_diff.rs  avx512_non_strict_schedule.rs  avx512_partial_write_bounds.rs  avx512_strict_diff.rs  common.rs  decode_diff.rs  encode_diff.rs  invalid_semantics.rs  neon_encode_diff.rs  neon_non_strict_schedule.rs  neon_partial_write_bounds.rs  neon_strict_diff.rs  roundtrip.rs  ssse3_non_strict_schedule.rs  ssse3_strict_diff.rs  tail_alignment.rs  wasm_encode_prefix_model.rs  wasm_non_strict_schedule.rs  wasm_partial_write_model.rs  wasm_pshufb_compat.rs
scripts/: bench_shield.sh  lane_defs.sh  perf_decode_report.sh  safety_phase0_baseline.sh  sse_strict_harness.sh  sse_strict_sweep.sh  verify_safety.sh
src/: cpu.rs  lib.rs  scalar.rs
src/engine/: avx2.rs  avx512vbmi.rs  common.rs  mod.rs  neon.rs  scalar.rs  ssse3.rs  wasm_simd128.rs
src/engine/models/: avx2.rs  avx512vbmi.rs  mod.rs  neon.rs  ssse3.rs  wasm_simd128.rs
src/simd/: avx2.rs  avx512.rs  mod.rs  neon.rs  scalar.rs  sse42.rs  ssse3.rs  ssse3_cstyle.rs  ssse3_cstyle_experiments.rs  ssse3_cstyle_experiments_hybrid.rs
src/verify/: mod.rs
tests/: avx2_decode_tests.rs  avx2_encode_tests.rs  avx2_models.rs  avx512_vbmi_decode_tests.rs  avx512_vbmi_encode_tests.rs  avx512_vbmi_models.rs  common_contracts.rs  msan_scalar_contracts.rs  neon_decode_tests.rs  neon_encode_tests.rs  neon_models.rs  proptest.proptest-regressions  proptest.rs  scalar_contracts.rs  simd_fuzz_strict.rs  sse_decode_tests.proptest-regressions  sse_decode_tests.rs  sse_encode_tests.rs  ssse3_models.rs  wasm_simd128_decode_tests.rs  wasm_simd128_encode_tests.rs  wasm_simd128_models.rs
tests/c/: test_tb64.c
