[package]
name = "oxid64"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bitflags = "2.11.0"
enum_dispatch = "0.3.13"
rand = "0.10.0"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5.1"
libc = "0.2"
base64 = "0.22.1"

[[bench]]
name = "base64_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = "full"
panic = "abort"
incremental = false
