[package]
name = "oxid64"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "High-performance Base64 codec with SIMD acceleration (SSSE3, AVX2, AVX-512 VBMI, NEON, WASM SIMD128)"
license = "MIT"
repository = "https://github.com/jorgeolvr/oxid64"
readme = "README.md"
keywords = ["base64", "simd", "encoding", "decoding", "avx2"]
categories = ["encoding", "no-std"]

include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
]

[dependencies]

[dev-dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"

[[bench]]
name = "base64_bench"
harness = false

[[bin]]
name = "miri_smoke"
path = "src/bin/miri_smoke.rs"
test = false
bench = false

[[bin]]
name = "msan_smoke"
path = "src/bin/msan_smoke.rs"
test = false
bench = false

[profile.release]
opt-level = 3
debug = "full"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
